--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -30,10 +30,10 @@
 
       <mat-card-content class="align-center">
         <p>
-          Direct: sdfds
+          Direct: 505-555-1515
         </p>
         <p>
-          Email: sdfsdfs
+          Email: in-n-out-books@email.com
         </p>
       </mat-card-content>
     </mat-card>
